--- a/src/comonents/Header/Header.css
+++ b/src/comonents/Header/Header.css
@@ -61,6 +61,7 @@
     box-shadow: 0 10px 10px black;
     padding: 10px 0 0 10px;
     transition: 0.6s ease-in-out;
+    z-index: 50;
   }
   #navbar > li {
     margin-top: 10px;
