--- a/src/comonents/Info/Information.module.css
+++ b/src/comonents/Info/Information.module.css
@@ -4,7 +4,10 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+.main_img {
+  background-color: rgb(12, 35, 35);
+}
 .image_overlay {
-  color: rgb(0, 0, 0);
-  background-color: rgb(222, 222, 126, 0.4);
+  color: rgb(12, 35, 35);
+  background-color: rgba(255, 255, 255, 0.7);
 }
