--- a/src/comonents/Header/Header.css
+++ b/src/comonents/Header/Header.css
@@ -50,7 +50,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    position: absolute;
+    position: fixed;
     top: 12vh;
     right: 0px;
     width: 70vw;
