--- a/src/comonents/Header/Header.css
+++ b/src/comonents/Header/Header.css
@@ -3,8 +3,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: white;
-  background-color: rgb(100, 100, 100);
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
 }
 #navbar {
   display: flex;
