--- a/src/modals/Modal.module.css
+++ b/src/modals/Modal.module.css
@@ -14,8 +14,8 @@
   font-weight: 600;
 }
 .leafImag {
-  height: 50px;
-  margin-left: 5px;
+  height: 35px;
+  margin-right: 15px;
 }
 .form_input:focus {
   box-shadow: 0 0 0 0.1rem rgba(0, 123, 255, 0.25);
